@@ -1,8 +1,9 @@
 Revision history for perl module AnyEvent::UserAgent
 
 0.06    2014-07-31
-        - Renamed timeout option to inactivity_timeout.
-        - Added request_timeout option (thanks to Alexander Onokhov).
+        - Renamed timeout attribute to inactivity_timeout.
+        - Added request_timeout attribute (thanks to Alexander Onokhov).
+        - Added Client-Warning header on error, like in LWP::UserAgent.
 
 0.05    2014-06-21
         - Fixed test failed for perl <= 5.12.
